# fpga_reserve

./: Cargo.toml
src/: lib.rs
src/db/: conn.rs  mod.rs
src/db/migrations/: class.rs  class_student_junction.rs  mod.rs  student.rs  teacher.rs
src/db/models/: class.rs  class_student_junction.rs  mod.rs  student.rs  teacher.rs
test_data/: test_class_get_students.db
