[package]
name = "fpga_reserve"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
futures = "0.3.31"
sea-orm = { version = "1.1.0", default-features = false, features = [
    "sqlx-all",
    "runtime-tokio-rustls",
    "serde_json",
    "with-json",
] }
sea-orm-migration = { version = "1.1.0", features = [
    "sqlx-mysql",
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
], default-features = false }

serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
# sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
serial_test = "3.1.1"
