[package]
name = "fpga_reserve"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
argon2 = "0.5.3"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.31"
hex = "0.4.3"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
sea-orm = { version = "1.1.0", default-features = false, features = ["sqlx-all", "runtime-tokio-rustls", "serde_json", "with-json", "time", "with-time", "chrono", "with-chrono"] }
sea-orm-migration = { version = "1.1.0", features = [
    "sqlx-mysql",
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
], default-features = false }

serde = { version = "1.0.214", features = ["derive", "serde_derive"] }
serde_json = "1.0.132"
sha2 = "0.10.8"
# sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.11.0", features = ["v7", "v8"] }

[dev-dependencies]
serial_test = "3.1.1"
